samples/_failures_safe/1761311555_f4df73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5480065e.c: In function ‘main’:
./samples/SAFE/__tmp_5480065e.c:147:25: error: missing terminating " character
  147 |         fprintf(stderr, "Decompression failed
      |                         ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5480065e.c:147:9: error: expected expression at end of input
  147 |         fprintf(stderr, "Decompression failed
      |         ^~~~~~~
./samples/SAFE/__tmp_5480065e.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5480065e.c:147:9: error: expected declaration or statement at end of input
